--- a/puntos.html
+++ b/puntos.html
@@ -63,7 +63,6 @@
                             </form>
                         </div>
                     </div>
-
                 </div>
 
             </div>
@@ -91,6 +90,42 @@
             .then(data => {
                 document.getElementById('topbar').innerHTML = data;
             });
+
+            function submitForm() {
+    const formData = {
+        pais: document.getElementById('pais').value,
+        estado: document.getElementById('estado').value,
+        municipio: document.getElementById('municipio').value,
+        cp: document.getElementById('cp').value,
+        nombre: document.getElementById('nombre').value,
+        zona: document.getElementById('zona').value
+    };
+
+    fetch('http://localhost:3001/puntos/guardar-producto', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(formData)
+    })
+    .then(response => {
+        if (!response.ok) {
+            throw new Error('Error al enviar los datos del formulario');
+        }
+        return response.json();
+    })
+    .then(data => {
+        console.log(data);
+        // Agrega lógica para mostrar un mensaje de éxito
+        alert('Punto de Venta creado exitosamente');
+    })
+    .catch(error => {
+        console.error('Error:', error);
+        alert('Error al crear el Punto de Venta');
+    });
+}
+
+
     </script>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
