--- a/gestion-puntos.html
+++ b/gestion-puntos.html
@@ -10,6 +10,8 @@
     <title>Gestión de Puntos de Venta - 8Eleven</title>
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
 
@@ -54,7 +56,8 @@
         </div>
     </div>
 
-    <div class="modal fade" id="editarPuntoVentaModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="editarPuntoVentaModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -64,117 +67,131 @@
                 <div class="modal-body" id="modalBody">
                     <div id="detallePuntoVentaContent"></div>
                     <div class="card-body">
-                            <div class="mb-3">
-                                <label for="pais" class="form-label">País</label>
-                                <input type="text" class="form-control" id="pais" placeholder="Ingrese el país" required>
+                        <div class="mb-3">
+                            <label for="pais" class="form-label">País</label>
+                            <input type="text" class="form-control" id="pais" placeholder="Ingrese el país" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="estado" class="form-label">Estado</label>
+                            <input type="text" class="form-control" id="estado" placeholder="Ingrese el estado"
+                                required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="municipio" class="form-label">Municipio</label>
+                            <input type="text" class="form-control" id="municipio" placeholder="Ingrese el municipio"
+                                required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cp" class="form-label">Código Postal (C.P)</label>
+                            <input type="text" class="form-control" id="cp" placeholder="Ingrese el código postal"
+                                required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="nombre" class="form-label">Nombre del Punto de Venta</label>
+                            <input type="text" class="form-control" id="nombre"
+                                placeholder="Ingrese el nombre del punto de venta" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="zona" class="form-label">Zona</label>
+                            <input type="text" class="form-control" id="zona" placeholder="Ingrese la zona" required>
+                        </div>
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Cerrar</button>
+                                    <button type="button" class="btn btn-primary"
+                                        onclick="actualizarPuntoVenta()">Actualizar</button>
+                                </div>
                             </div>
-                            <div class="mb-3">
-                                <label for="estado" class="form-label">Estado</label>
-                                <input type="text" class="form-control" id="estado" placeholder="Ingrese el estado" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="municipio" class="form-label">Municipio</label>
-                                <input type="text" class="form-control" id="municipio" placeholder="Ingrese el municipio" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="cp" class="form-label">Código Postal (C.P)</label>
-                                <input type="text" class="form-control" id="cp" placeholder="Ingrese el código postal" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="nombre" class="form-label">Nombre del Punto de Venta</label>
-                                <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre del punto de venta" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="zona" class="form-label">Zona</label>
-                                <input type="text" class="form-control" id="zona" placeholder="Ingrese la zona" required>
-                            </div>
-                            <div class="container-fluid">
-                                <div class="row">
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" onclick="actualizarPuntoVenta()">Actualizar</button>
-                </div>
-            </div>
-        </div>
-    </div>
+                        </div>
+                    </div>
 
-    <script>
-fetch('sidebar.html?' + new Date().getTime())
-    .then(response => response.text())
-    .then(data => {
-        document.getElementById('sidebar').innerHTML = data;
-    });
+                    <script>
+                        const swalWithBootstrapButtons = Swal.mixin({
+                            customClass: {
+                                confirmButton: "btn btn-success m-2",
+                                cancelButton: "btn btn-danger"
+                            },
+                            buttonsStyling: false
+                        });
 
-fetch('topbar.html?' + new Date().getTime())
-    .then(response => response.text())
-    .then(data => {
-        document.getElementById('topbar').innerHTML = data;
-    });
+                        fetch('sidebar.html?' + new Date().getTime())
+                            .then(response => response.text())
+                            .then(data => {
+                                document.getElementById('sidebar').innerHTML = data;
+                            });
 
-            function cargarDetallePuntoVenta(nombrePuntoVenta) {
-        fetch(`https://8eleven.glitch.me/puntosVentasRoutes/detalle-punto-venta/${encodeURIComponent(nombrePuntoVenta)}`)
-            .then(response => response.json())
-            .then(data => {
-                const detallePuntoVentaContent = document.getElementById('detallePuntoVentaContent');
-                detallePuntoVentaContent.innerHTML = '';
-                document.getElementById('pais').value = data.pais;
-document.getElementById('estado').value = data.estado;
-document.getElementById('municipio').value = data.municipio;
-document.getElementById('cp').value = data.cp;
-document.getElementById('nombre').value = data.nombre;
-document.getElementById('zona').value = data.zona;
+                        fetch('topbar.html?' + new Date().getTime())
+                            .then(response => response.text())
+                            .then(data => {
+                                document.getElementById('topbar').innerHTML = data;
+                            });
 
-                $('#detallePuntoVentaModal').modal('show'); // Abre el modal después de cargar los detalles
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('Error al cargar los detalles del punto de venta');
-            });
-    }
+                        function cargarDetallePuntoVenta(nombrePuntoVenta) {
+                            fetch(`https://8eleven.glitch.me/puntosVentasRoutes/detalle-punto-venta/${encodeURIComponent(nombrePuntoVenta)}`)
+                                .then(response => response.json())
+                                .then(data => {
+                                    const detallePuntoVentaContent = document.getElementById('detallePuntoVentaContent');
+                                    detallePuntoVentaContent.innerHTML = '';
+                                    document.getElementById('pais').value = data.pais;
+                                    document.getElementById('estado').value = data.estado;
+                                    document.getElementById('municipio').value = data.municipio;
+                                    document.getElementById('cp').value = data.cp;
+                                    document.getElementById('nombre').value = data.nombre;
+                                    document.getElementById('zona').value = data.zona;
 
-        function actualizarPuntoVenta() {
-            const formData = {
-        pais: document.getElementById('pais').value,
-        estado: document.getElementById('estado').value,
-        municipio: document.getElementById('municipio').value,
-        cp: document.getElementById('cp').value,
-        nombre: document.getElementById('nombre').value,
-        zona: document.getElementById('zona').value,
-};
-fetch('https://8eleven.glitch.me/puntosVentasRoutes/actualizar-punto-venta', {
-    method: 'PUT',
-    headers: {
-        'Content-Type': 'application/json'
-    },
-    body: JSON.stringify(formData)
-})
-.then(response => {
-    if (!response.ok) {
-        throw new Error(`HTTP error! Status: ${response.status}`);
-    }
-    return response.json();
-})
-.then(data => {
-    console.log(data);
-    alert('Producto actualizado exitosamente');
-    $('#editarProductoModal').modal('hide');
-    cargarPuntosVentas();
-})
-.catch(error => {
-    console.error('Error:', error);
-    alert('Error en la actualización del producto');
-});
-        }
+                                    $('#detallePuntoVentaModal').modal('show'); // Abre el modal después de cargar los detalles
+                                })
+                                .catch(error => {
+                                    console.error('Error:', error);
+                                    alert('Error al cargar los detalles del punto de venta');
+                                });
+                        }
 
-        function cargarPuntosVentas() {
-            fetch('https://8eleven.glitch.me/puntosVentasRoutes/listar-puntos-ventas')
-                .then(response => response.json())
-                .then(data => {
-                    const tablaPuntosVentas = document.getElementById('tablaPuntosVentas');
-                    tablaPuntosVentas.innerHTML = '';
+                        function actualizarPuntoVenta() {
+                            const formData = {
+                                pais: document.getElementById('pais').value,
+                                estado: document.getElementById('estado').value,
+                                municipio: document.getElementById('municipio').value,
+                                cp: document.getElementById('cp').value,
+                                nombre: document.getElementById('nombre').value,
+                                zona: document.getElementById('zona').value,
+                            };
+                            fetch('https://8eleven.glitch.me/puntosVentasRoutes/actualizar-punto-venta', {
+                                method: 'PUT',
+                                headers: {
+                                    'Content-Type': 'application/json'
+                                },
+                                body: JSON.stringify(formData)
+                            })
+                                .then(response => {
+                                    if (!response.ok) {
+                                        throw new Error(`HTTP error! Status: ${response.status}`);
+                                    }
+                                    return response.json();
+                                })
+                                .then(data => {
+                                    console.log(data);
+                                    alert('Producto actualizado exitosamente');
+                                    $('#editarProductoModal').modal('hide');
+                                    cargarPuntosVentas();
+                                })
+                                .catch(error => {
+                                    console.error('Error:', error);
+                                    alert('Error en la actualización del producto');
+                                });
+                        }
 
-                    data.forEach(puntoVenta => {
-                        const fila = `<tr>
+                        function cargarPuntosVentas() {
+                            fetch('https://8eleven.glitch.me/puntosVentasRoutes/listar-puntos-ventas')
+                                .then(response => response.json())
+                                .then(data => {
+                                    const tablaPuntosVentas = document.getElementById('tablaPuntosVentas');
+                                    tablaPuntosVentas.innerHTML = '';
+
+                                    data.forEach(puntoVenta => {
+                                        const fila = `<tr>
                             <td>${puntoVenta.pais}</td>
                             <td>${puntoVenta.estado}</td>
                             <td>${puntoVenta.municipio}</td>
@@ -182,52 +199,52 @@ fetch('https://8eleven.glitch.me/puntosVentasRoutes/actualizar-punto-venta', {
                             <td>${puntoVenta.nombre}</td>
                             <td>${puntoVenta.zona}</td>
                             <td>
-                                <button type="button" class="btn btn-sm btn-info" data-bs-toggle="modal"
+                                <button type="button" class="btn btn-sm btn-primary m-1" data-bs-toggle="modal"
                                 data-bs-target="#editarPuntoVentaModal"
                                 onclick="cargarDetallePuntoVenta('${puntoVenta.nombre}')">Editar</button>
                                 <button type="button" class="btn btn-sm btn-danger" onclick="eliminarPuntoVenta('${puntoVenta.nombre}')">Eliminar</button>
                             </td>
                         </tr>`;
-                        tablaPuntosVentas.innerHTML += fila;
-                    });
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('Error al cargar la lista de puntos de venta');
-                });
-        }
-
-        function eliminarPuntoVenta(nombre) {
-            if (confirm('¿Estás seguro de eliminar este punto de venta?')) {
-                fetch(`https://8eleven.glitch.me/puntosVentasRoutes/eliminar-punto-venta/${nombre}`, {
-                    method: 'DELETE'
-                })
-                    .then(response => {
-                        if (!response.ok) {
-                            throw new Error(`HTTP error! Status: ${response.status}`);
+                                        tablaPuntosVentas.innerHTML += fila;
+                                    });
+                                })
+                                .catch(error => {
+                                    console.error('Error:', error);
+                                    alert('Error al cargar la lista de puntos de venta');
+                                });
                         }
-                        return response.json();
-                    })
-                    .then(data => {
-                        console.log(data);
-                        alert('Punto de venta eliminado exitosamente');
-                        cargarPuntosVentas(); // Recargar la lista después de eliminar
-                    })
-                    .catch(error => {
-                        console.error('Error:', error);
-                        alert('Error al eliminar el punto de venta');
-                    });
-            }
-        }
 
-        cargarPuntosVentas();
-    </script>
+                        function eliminarPuntoVenta(nombre) {
+                            if (confirm('¿Estás seguro de eliminar este punto de venta?')) {
+                                fetch(`https://8eleven.glitch.me/puntosVentasRoutes/eliminar-punto-venta/${nombre}`, {
+                                    method: 'DELETE'
+                                })
+                                    .then(response => {
+                                        if (!response.ok) {
+                                            throw new Error(`HTTP error! Status: ${response.status}`);
+                                        }
+                                        return response.json();
+                                    })
+                                    .then(data => {
+                                        console.log(data);
+                                        alert('Punto de venta eliminado exitosamente');
+                                        cargarPuntosVentas(); // Recargar la lista después de eliminar
+                                    })
+                                    .catch(error => {
+                                        console.error('Error:', error);
+                                        alert('Error al eliminar el punto de venta');
+                                    });
+                            }
+                        }
 
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="js/sb-admin-2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+                        cargarPuntosVentas();
+                    </script>
+
+                    <script src="vendor/jquery/jquery.min.js"></script>
+                    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+                    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+                    <script src="js/sb-admin-2.min.js"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
