--- a/usuarios.html
+++ b/usuarios.html
@@ -15,17 +15,16 @@
 </head>
 
 <body id="page-top">
-    <div id="wrapper">
 
-        <!-- Barra Lateral (Sidebar) -->
+    <div id="wrapper">
         <div id="sidebar"></div>
 
         <!-- Contenido de la página -->
         <div id="content-wrapper" class="d-flex flex-column">
             <div id="content">
-
-                <!-- Barra de Navegación Superior -->
                 <div id="topbar"></div>
+                <!-- Barra de Navegación Superior -->
+
 
                 <div class="container w-50 mt-5">
 
@@ -104,38 +103,48 @@
                 document.getElementById('topbar').innerHTML = data;
             });
 
-            function submitForm() {
-    console.log('submitForm');
-    const formData = {
-        nombre: document.getElementById('nombre').value,
-        apellido: document.getElementById('apellido').value,
-        usuario: document.getElementById('usuario').value,
-        password: document.getElementById('password').value,
-        rol: document.getElementById('rol').value
-    };
+        function submitForm() {
+            console.log('submitForm');
+            const formData = {
+                nombre: document.getElementById('nombre').value,
+                apellido: document.getElementById('apellido').value,
+                usuario: document.getElementById('usuario').value,
+                password: document.getElementById('password').value,
+                rol: document.getElementById('rol').value
+            };
 
-    fetch('https://8eleven.glitch.me/users/guardar-usuario', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(formData)
-    })
-        .then(response => {
-            if (!response.ok) {
-                throw new Error(`HTTP error! Status: ${response.status}`);
-            }
-            return response.json();
-        })
-        .then(data => {
-            console.log(data);
-            alert('Usuario creado exitosamente');
-        })
-        .catch(error => {
-            console.error('Error:', error);
-            alert('Error al crear el usuario');
-        });
-}
+            fetch('https://8eleven.glitch.me/users/guardar-usuario', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(formData)
+            })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! Status: ${response.status}`);
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    console.log(data);
+                    Swal.fire({
+                        icon: 'success',
+                        title: 'Usuario creado exitosamente',
+                        showConfirmButton: false,
+                        timer: 1500
+                    });
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Error',
+                        text: 'Error al crear el usuario'
+                    });
+                });
+        }
+
 
     </script>
     <script src="vendor/jquery/jquery.min.js"></script>
